Fix error in title color

--- a/_sass/minimal-mistakes/_navigation.scss
+++ b/_sass/minimal-mistakes/_navigation.scss
@@ -486,7 +486,7 @@
   font-family: $sans-serif-narrow;
   font-size: $type-size-5;
   font-weight: bold;
-  color:rgba(7, 80, 148) // #075094
+  color: #075094
 }
 
 .nav__sub-title {
